# OpenGL_Chess

./: .gitignore  CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/glew/: CMakeLists.txt
lib/stb/: CMakeLists.txt
res/shaders/: vert.glsl
res/shaders/board/: frag.glsl
res/shaders/piece/: frag.glsl  vert.glsl
res/shaders/pieces/: frag.glsl  vert.glsl
src/: CMakeLists.txt  Info.plist  main.cpp
src/Window/: WindowManager.cpp  WindowManager.h
src/chess/: GameBoard.cpp  GameBoard.h
src/rendering/: MasterRenderer.cpp  MasterRenderer.h
src/rendering/components/: TextureLoader.cpp  TextureLoader.h
src/rendering/entities/: Entity.cpp  Entity.h  Renderable.h
src/rendering/entities/pieces/: PieceEntity.cpp  PieceEntity.h
src/rendering/materials/: BaseMaterial.cpp  BaseMaterial.h
src/rendering/materials/pieces/: PieceMaterial.cpp  PieceMaterial.h
